--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://fred8617.github.io/subgraph-isomorphism-example",
   "dependencies": {
     "@antv/g6": "^4.7.10",
     "@tanstack/react-query": "^4.14.5",
