--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "subgraph-isomorphism-example",
+  "version": "1.0.0-beta",
   "private": true,
   "homepage": "https://fred8617.github.io/subgraph-isomorphism-example",
   "dependencies": {
